# suppawt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.MD  README.md  README.rst  bakindex.rst  build_docs.bat  build_docs.sh  index.rst  pyproject.toml
deploy/: all_reqs.txt  git_reqs.txt  local_reqs_hm.txt  local_reqs_office.txt
docs/: backup.rst  conf.py  index.md  index.rst  index.rstbak  notreqs.txt  requirements.txt
docs/backup_ps/: pruner.rst  sqlmodel.rst
docs/pages/: logging.rst  office.rst  sqlmodel.rst
docs/rst_pages/: backup.rst  fastui.rst  html.rst  logging.rst  misc.rst  pdf_array.md  sqlmodel.rst
docs/wiki/stories/: expresslink.md  stor.md
leg/: fastui2.py  fastui_support1.py
leg/pydantic_leg/: pyd_types.py
leg/sqlmodel_ps/: sqlpr.py  sqlpr_test.py
serenity/: README.rst
serenity/docs/: conf.py  index.rst  movie.rst
serenity/docs/_build/doctrees/: environment.pickle  index.doctree  movie.doctree  serenity.doctree
serenity/docs/_build/html/: .buildinfo  genindex.html  index.html  movie.html  py-modindex.html  search.html  searchindex.js  serenity.html
serenity/src/serenity/: ship.py
src/pawsupport/: __init__.py  async_ps.py  bs4_ps.py  convert.py  error_support.py  errors.py  get_set.py  google.py  misc.py  misc_ps.py  sqlmodel_support.py  types_ps.py
src/pawsupport/backup_paw/: __init__.py  copy_prune.py  sqlmodel_backup.py
src/pawsupport/backup_paw/scripts/: prune_backup.sh
src/pawsupport/backup_ps/: README.md  __init__.py  copy_prune.py  pruner.py  schedule.py  sqlmodel_backup.py
src/pawsupport/config_ps/wsl_user/: win-wsl-links.sh
src/pawsupport/context_menu/: __init__.py  cmtest.py  play.py
src/pawsupport/fastui_ps/: __init__.py  css.py  fastui_support.py  fastui_support1.py  fui.py  types.py
src/pawsupport/fastui_suport/: fuis.py
src/pawsupport/html_ps/: __init__.py  page_soup.py  soup_selectors.py
src/pawsupport/logger_paw/: consts.py  logger_config.py  logger_config_loguru.py
src/pawsupport/logger_paw/loggingdecorators/: __init__.py
src/pawsupport/logging_ps/: __init__.py  config.py  config_loguru.py
src/pawsupport/office_ps/: doc_handler.py  email_handler.py  merger.py  o_tool.py  system_tools.py
src/pawsupport/office_ps/foss/: __init__.py  gmail_handler.py  libre_handler.py
src/pawsupport/office_ps/ms/: __init__.py  outlook_handler.py  word_handler.py
src/pawsupport/pawconfig/: .bashrc  .gitignore
src/pawsupport/pawlogger/: __init__.py
src/pawsupport/pawlogger/loggingdecorators/: decorators.py  legacy.py
src/pawsupport/pdf_tools/: __init__.py
src/pawsupport/pdf_tools/array_on/: array_pdf_on_a4_landscape.py  array_pdfs.py  convert_dir and print.bat  convert_dir.bat
src/pawsupport/pdf_tools/array_pdf/: __main__.py  addmenu.py  convert_dir.bat  convert_dir_and_print.bat  pyproject.toml  removemenu.py
src/pawsupport/pdf_tools/array_pdf/deploy/: add_print_array_context_menu.bat  remove_print_array_context_menu.bat
src/pawsupport/pdf_tools/array_pdf/deploy/dockerstuff/: docker-compose.yaml  dockercomposeold.yaml
src/pawsupport/pdf_tools/array_pdf/src/array_pdf/: WEBTEST.PY  __init__.py  array_cm.py  array_p.py  pdf_array_cont_men.py  removemenu.py  removemenu_old.py  tresting.py
src/pawsupport/pdf_tools/array_pdfs/: array.py  convert_dir.bat  convert_dir_and_print.bat  pdf_array_cont_men.py
src/pawsupport/pdf_tools/array_pdfs_old/: array.py  install_pdf_array_cm.bat  pyproject.toml
src/pawsupport/pdf_tools/play/: array_a6_on_a4.py  array_a6_on_a42.py  array_old.py  main.py  new.py  new2.py
src/pawsupport/pydantic/: pyd_types.py
src/pawsupport/sqlmodel_ps/: __init__.py  sqlm.py  sqlm_test.py  sqlpr.py
src/pawsupport/types_ps/: __init__.py  error_ps.py  typ.py
src/pawsupport/util-paw/: utils_pss.py
src/suppawt/: __init__.py  compare.py  convert.py  get_set.py  get_values.py  misc.py  pawsync.py
src/suppawt/backup_ps/: __init__.py  prune_funcs.py  sqlmodel_backup.py
src/suppawt/backupaw/: .env.example  __init__.py  pruner.py
src/suppawt/backupaw/scripts/: test_prune.sh
src/suppawt/logging_ps/: config_loguru.py
src/suppawt/office_ps/: email_handler.py  merger.py  o_tool.py
src/suppawt/office_ps/foss/: gmail_handler.py  libre_handler.py
src/suppawt/office_ps/ms/: outlook_handler.py  word_handler.py
src/suppawt/pawlogger/: __init__.py  config_loguru.py
src/suppawt/pawlogger/loggingdecorators/: consts_formats.py
src/suppawt/pdf_tools/array_pdf/: pyproject.toml
tests/: test_any_in_any.py  test_backup.py  test_logging.py  xx.py
(+34 files in other folders)
