[project]
name = "pawsupport"
version = "0.2"
description = "utils"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]

dependencies = [
    'loguru',
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
fast = [
    'fastuipr @git+https://github.com/pawrequest/fastuipr',
    'flaskwebgui @git+https://github.com/pawrequest/flaskwebgui',
    "fastapi",
    'uvicorn[standard]',
    "sqlmodel",
]
html = [
    "aiohttp",
    "beautifulsoup4",
]
office = [
    'context-menu',
    'pypdf',
    "docxtpl",
    "pywin32; sys_platform == 'win32'",
    "openpyxl",
    "docx2pdf",
    "comtypes",
    "pypdf",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinx-readme",
    "myst-parser",
]
dev = [
    'pytest',
    'pytest-asyncio',

]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = false
dev-dependencies = [
    'pytest',
    'pytest-asyncio',
]

[tool.hatch.metadata]
allow-direct-references = true

