[project]
name = "array_pdf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paul-Sees-Solutions", email = "79617825+Paul-Sees-Solutions@users.noreply.github.com" }
]
dependencies = [
    'pypdf',
    'loguru',
    'context-menu',
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.wheel]
packages = ["array_pdf"]

